cmake_minimum_required(VERSION 2.8)
cmake_policy(SET CMP0015 NEW)
project(DungeonTime)

aux_source_directory(src/ SOURCES)
include_directories(netLink/include)
link_directories(netLink/build/out)
add_definitions(-O3 -std=c++1y -D_GLIBCXX_USE_CXX11_ABI=0)
add_executable(${PROJECT_NAME} ${SOURCES})
target_link_libraries(${PROJECT_NAME} netLink)
